--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: myapp
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn your_project.wsgi:application
+    startCommand: gunicorn healthwallet.wsgi:application
     envVars:
       - key: django-insecure-=30gv1o%3ye@g3=+&mu6esd@q5s@c)k7sgu=z0-01u3h7nupmw
         generateValue: true
